<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chip_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/chipsChoseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chips_chose_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/filterChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipsChoseLabel">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCharacterName"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_name_label" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCharacterSpecies"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_species_label" />

        <!--com.google.android.material.chip.Chip
            android:id="@+id/chip_type"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_type_label" -->

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/chipsStatusLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chips_character_status_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterChips" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/choseChipsStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipsStatusLabel"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_status_alive"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_status_alive" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_status_dead"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_status_dead" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_status_unknown"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_status_unknown" />


    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/chipsGenderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chips_character_gender_label"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choseChipsStatus" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/choseChipsGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipsGenderLabel"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_female"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_gender_female" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_male"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_gender_male" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_genderless"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_gender_genderless" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gender_unknown"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/chips_character_gender_unknown" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>