<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivCharacterDetails"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:padding="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:strokeColor="@color/design_default_color_primary"
        app:strokeWidth="5dp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvNameDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/character_name_template"

        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/tvStatusDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCharacterDetails" />

    <TextView
        android:id="@+id/tvSpeciesDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/character_species_template"
        android:textColor="@color/black"

        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/tvGenderDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNameDetails"

        />

    <TextView
        android:id="@+id/tvStatusDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/character_status_template"
        android:textColor="@color/black"
        android:textSize="18sp"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvNameDetails"
        app:layout_constraintTop_toTopOf="@id/tvNameDetails" />

    <TextView
        android:id="@+id/tvGenderDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/character_gender_template"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvSpeciesDetails"
        app:layout_constraintTop_toTopOf="@id/tvSpeciesDetails" />

    <TextView
        android:id="@+id/tvOriginDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/character_origin_template"

        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSpeciesDetails"

        />

    <TextView
        android:id="@+id/tvLocationDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:text="@string/character_location_template"

        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOriginDetails" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvEpisodeDetails"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocationDetails"
        tools:listitem="@layout/item_episode" />


</androidx.constraintlayout.widget.ConstraintLayout>